@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: autogen.sh,v 1.6 2009/02/01 01:11:47 karl Exp $
+# $Id: autogen.sh,v 1.7 2011/10/17 17:49:07 karl Exp $
 # Created 2003-08-29, Karl Berry.  Public domain.
 
 if test "x$1" = x-n; then
@@ -9,7 +9,12 @@ else
   chicken=
 fi
 
-echo "Preparing CVS Texinfo infrastructure:"
+echo "Preparing Texinfo development infrastructure:"
+
+# Generates an include file for tp/Makefile.am.
+cmd="tp/maintain/regenerate_file_lists.pl"
+echo "  $cmd"
+$chicken eval $cmd || exit 1
 
 # This overwrites lots of files with older versions.
 # I keep the newest versions of files common between distributions up to
@@ -17,12 +22,11 @@ echo "Preparing CVS Texinfo infrastructure:"
 # developer to do this.
 #cmd="autoreconf --verbose --force --install --include=m4"
 
+# So instead:
 : ${ACLOCAL=aclocal}
 : ${AUTOHEADER=autoheader}
 : ${AUTOMAKE=automake}
 : ${AUTOCONF=autoconf}
-
-# So instead:
 cmd="$ACLOCAL -I gnulib/m4 && $AUTOCONF && $AUTOHEADER && $AUTOMAKE"
 echo "  $cmd"
 $chicken eval $cmd || exit 1
